--- a/WpfApplication1 (3)/WpfApplication1/WpfApplication1/WpfApplication1.csproj
+++ b/WpfApplication1 (3)/WpfApplication1/WpfApplication1/WpfApplication1.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ChooseCategory.cs" />
+    <Compile Include="NumberValidationRule.cs" />
+    <Compile Include="SelectedSectionConverter.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -69,6 +72,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MainWindowViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
