--- a/WpfApplication1 (3)/WpfApplication1/WpfApplication1/WpfApplication1.csproj
+++ b/WpfApplication1 (3)/WpfApplication1/WpfApplication1/WpfApplication1.csproj
@@ -55,9 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="ChooseCategory.cs" />
     <Compile Include="NumberValidationRule.cs" />
-    <Compile Include="SelectedSectionConverter.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -70,6 +68,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Resources.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainWindowViewModel.cs" />
@@ -98,6 +100,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Back.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Combobox.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
